[package]
name = "js-wrap"
version = "0.1.0"
description = "JS Wrap"
authors = ["Polywrap"]
repository = "https://github.com/nerfZael/js-engine-wrapper"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
boa_engine = { features = ["console"], version = "0.16.0" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
