[package]
name = "module"
version = "0.1.0"
description = "JS Wrap"
authors = ["Polywrap"]
repository = "https://github.com/nerfZael/js-engine-wrapper"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
boa_engine = { path = "/home/zael/dev/nerfZael/boa/boa_engine" }
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
getrandom = { version = "=0.2.9", features = ["custom"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
